<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/userAdd"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/UserAdd"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/userNameAdd"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/UserNameAdd"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/userAgeAdd"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/UserAgeAdd"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>